Finish up html and resume

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
               <a href="mailto:fernandezr16@gmail.com">Mail</a> |
               <a href="http://twitter.com/intent/tweet?screen_name=rickthemovie">Tweet!</a>
             <p>
-          <h5 class="header col s12 light">Autonomous self-learner with a knack for software development.</h5>
+          <h5 class="header col s12 light">Autonomous self-learning with a knack for software development.</h5>
           
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="mdi-image-flash-on"></i></h2>
+            <h2 class="center black-text"><i class="mdi-image-flash-on"></i></h2>
             <h5 class="center">Languages</h5>
 
             <ul class="light" style="list-style-type:square">
@@ -79,7 +79,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="mdi-social-group"></i></h2>
+            <h2 class="center black-text"><i class="mdi-social-group"></i></h2>
             <h5 class="center">Frameworks</h5>
 
             <ul class="light">
@@ -93,7 +93,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="mdi-action-settings"></i></h2>
+            <h2 class="center black-text"><i class="mdi-action-settings"></i></h2>
             <h5 class="center">Databases</h5>
 
             <ul class="light">
@@ -115,9 +115,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Experience</h5>
+          <h5 class="header center teal-text text-lighten-2">Experience</h5>
           <%= render 'shared/experience' %>
-           <h5 class="header col s12 light">Education</h5>
+
             <h5 class="header col s12 light"></h5>
         </div>
       </div>
@@ -126,11 +126,30 @@
   </div>
 
   <div class="container">
+    <!-- Projects Section -->
+    <%= render 'shared/projects' %>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+           <h5 class="header col s12 light">Education</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
+  
+  <div class="container">
+  
     <div class="section">
 
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h3><i class="mdi-content-send black-text"></i></h3>
           <h4>Contact Us</h4>
           Please feel free to use any of the methods below to reach me!
         </div>
@@ -139,17 +158,6 @@
     </div>
   </div>
 
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3"></div>
-  </div>
 
   <footer class="page-footer black">
    
