--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,40 +1,19 @@
+        <div class="video-container no-controls">
+          <iframe width="453" height="280" src="//www.youtube.com/watch?v=OQ12YkRAa-Q;autohide=1" frameborder="0" allowfullscreen></iframe>
+        </div>
 
-
-<p>
-    <strong>Lightspeed Systems Inc</strong>
-    Feb 2014<strong> </strong>– Mar 2015
+<p align = "center">
+    <strong>Lightspeed Systems Inc</strong> <br> Feb 2014– Mar 2015
 </p>
-<p>
-    <strong>SaaS QA Engineer</strong>
-    Bakersfield, CA<strong></strong>
+<p align="left">
+    <strong>SaaS QA Engineer</strong> <br>
+    As a senior member of the SaaS QA department, 
 </p>
-<ul >
-    <li>
-        Languages: Ruby | Framework: Rails, Sinatra, Bootstrap
-    </li>
-    <li>
-        Automated Testing: Cucumber BDD
-    </li>
-    <li>
-        Manual Testing: Tablets, Phones, Virtual Machines, and other Supported devices.
-    </li>
-    <li>
-        Bug documentation: Pivotal Tracker, Github
-    </li>
-    <li>
-        Advanced iOS/Android troubleshooting: xCode and Command Inspection.
-    </li>
-    <li>
-        Cloud/AWS troubleshooting.
-    </li>
-    <li>
-        Production Server deployments.
-    </li>
-    <li>
-        Release Note documentation: Internal Wiki, Customer Community Site, Company email lists.
-    </li>
-    <li>
-        Weekly leadership in meetings/SCRUM/Sprint planning discussing current troubleshooting issues.
-    </li>
-</ul>
 
+
+
+<p> <strong>June 2013 - Feb 2014</strong></p>
+<p align="left">
+    <strong>Webfilter QA Engineer </strong> <br>
+    During my accelatered workload on the Webfilter team, I dove head first into
+</p>
