--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,6 +1,6 @@
-        <div class="video-container no-controls">
-          <iframe width="453" height="280" src="//www.youtube.com/watch?v=OQ12YkRAa-Q;autohide=1" frameborder="0" allowfullscreen></iframe>
-        </div>
+  <video width="353" height="230" class="responsive-video" controls>
+    <source src="movie.mp4" type="video/mp4">
+  </video>
 
 <p align = "center">
     <strong>Lightspeed Systems Inc</strong> <br> Feb 2014– Mar 2015
