Remove video add lightspeed logo

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -70,3 +70,10 @@ footer.page-footer {
   border-radius: 100%;
 
 }
+
+.lightspeed-logo {
+ margin-top: 30px;
+  max-width: 70px;
+  margin-bottom: 20px;
+
+}
