--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,6 +1,4 @@
-  <video width="353" height="230" class="responsive-video" controls>
-    <source src="movie.mp4" type="video/mp4">
-  </video>
+<img src="lightspeed.png" alt="lightspeed" class="lightspeed-logo">
 
 <p align = "center">
     <strong>Lightspeed Systems Inc</strong> <br> Feb 2014– Mar 2015
