--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -115,7 +115,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header center teal-text text-lighten-2">Experience</h5>
+          <h5 class="header center white-text text-lighten-2">Experience</h5>
           <%= render 'shared/experience' %>
 
             <h5 class="header col s12 light"></h5>
@@ -136,6 +136,7 @@
       <div class="container">
         <div class="row center">
            <h5 class="header col s12 light">Education</h5>
+           <%=render "shared/education"%>
         </div>
       </div>
     </div>
@@ -150,8 +151,8 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send black-text"></i></h3>
-          <h4>Contact Us</h4>
-          Please feel free to use any of the methods below to reach me!
+          <h4>Contact</h4>
+          <p color = "black">Please feel free to use any of the methods at the top of the page. </p>
         </div>
       </div>
 
@@ -159,42 +160,7 @@
   </div>
 
 
-  <footer class="page-footer black">
-   
-   <!--  <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
-   
-
-      <div class="container">
-       <font color="white">&copy; Ricardo Fernandez</color>
-      </div>
-  </footer>
 
 
   <!--  Scripts-->
