changed icons and bakcground

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,7 +79,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-social-group"></i></h2>
+            <h2 class="center black-text"><i class="mdi-content-link"></i></h2>
             <h5 class="center">Frameworks</h5>
 
             <ul class="light">
