--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
   <title>Parallax Template - Materialize</title>
 
   <!-- CSS  -->
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -68,7 +68,7 @@
             <h5 class="center">Languages</h5>
 
             <ul class="light" style="list-style-type:square">
-            	<li>Ruby</li>
+            	<li><strong>Ruby</li>
             	<li>Javascipt</li>
             	<li>HTML5</li>
             	<li>CSS</li>
@@ -83,7 +83,7 @@
             <h5 class="center">Frameworks</h5>
 
             <ul class="light">
-              <li>Ruby on Rails</lu>
+              <li><strong>Ruby on Rails</lu>
               <li>Sinatra</li>
               <li>Bootstrap</li>
               <li>Materialize</li>
@@ -97,7 +97,7 @@
             <h5 class="center">Databases</h5>
 
             <ul class="light">
-              <li>MySql</li>
+              <li><strong>MySql</li>
               <li>PostgresSQL</li>
               <li>MongoDB</li>
               <li>Redis</li>
