--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,10 +38,9 @@
            <p>
               <a href="tel:6613167626">Call</a> |
               <a href="mailto:fernandezr16@gmail.com">Mail</a> |
-              <a href="http://twitter.com/intent/tweet?screen_name=rickthemovie">Tweet!</a>
-            <p>
-          <h5 class="header col s12 light">Autonomous self-learning with a knack for software development.</h5>
-          
+              <a href="http://twitter.com/intent/tweet?screen_name=rickthemovie">Tweet!</a><br>
+
+
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
 
@@ -58,8 +57,9 @@
 
 
   <div class="container">
+    
     <div class="section">
-
+              <%=render "shared/aboutme"%>
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
