added some more html and educaition

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -2,3 +2,14 @@
 <p align="left">
   <strong>Devry University of Bakersfield</strong> <br> B.S. Networking and Communication
 </p>
+
+
+<p align="left">
+  <strong>Self Study</strong> <br> Ruby, Ruby on Rails, HTML, CSS, Javascript
+</p>
+
+<p align="left">
+  <strong>Regional Occupational Center</strong> <br> A+ Certification
+</p>
+
+
