--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,7 +1,8 @@
 <img src="lightspeed.png" alt="lightspeed" class="lightspeed-logo">
 
+
 <p align = "center">
-    <strong>Lightspeed Systems Inc</strong> <br> Feb 2014– Mar 2015
+    <strong>Lightspeed Systems Inc</strong> <br> Feb 2014 – Mar 2015
 </p>
 <p align="left">
     <strong>SaaS QA Engineer</strong> <br>
@@ -14,4 +15,20 @@
 <p align="left">
     <strong>Webfilter QA Engineer </strong> <br>
     During my accelatered workload on the Webfilter team, I dove head first into
+</p>
+
+<p> <strong>Sept 2011 - June 2013</strong></p>
+<p align="left">
+    <strong>Support Engineer </strong> <br>
+    Working directly in Customer Service was something I enjoyed. 
+</p>
+
+<img src="xerox.png" alt="lightspeed" class="xerox-logo">
+
+<p align = "center">
+    <strong>Affiliated Computer Services </strong> <br> Feb 2011 – Sept 2011
+</p>
+<p align="left">
+    <strong>Wireless Customer Care Assistant </strong> <br>
+    My Day to Day at ACS was troubleshooting over the phone thorughout the day. Although it wasn't as technical as I got into later in my career is did teach me valuable lessons in Customer Serivce. At Xerox, you are taking back-to-back phone calls everyday all day. You get a huge spectrum of happy and unhappy customer. I can honestly say that the experiences while on the phones in a call center are invaluable. 
 </p>
