--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Ricardo Fernandez</h1>
+        <h1 class="header center white-text text-lighten-2">Ricardo Fernandez</h1>
         <div class="row center">
            <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
            <p>
@@ -68,10 +68,10 @@
             <h5 class="center">Languages</h5>
 
             <ul class="light" style="list-style-type:square">
-            	<li><strong>Ruby</li>
-            	<li>Javascipt</li>
-            	<li>HTML5</li>
-            	<li>CSS</li>
+            	<li><strong>◦ Ruby</li>
+            	<li>◦ Javascipt</li>
+            	<li>◦ HTML5</li>
+            	<li>◦ CSS</li>
             </ul>
             
           </div>
@@ -83,10 +83,10 @@
             <h5 class="center">Frameworks</h5>
 
             <ul class="light">
-              <li><strong>Ruby on Rails</lu>
-              <li>Sinatra</li>
-              <li>Bootstrap</li>
-              <li>Materialize</li>
+              <li><strong>◦ Ruby on Rails</lu>
+              <li>◦ Sinatra</li>
+              <li>◦ Bootstrap</li>
+              <li>◦ Materialize</li>
             </ul>
           </div>
         </div>
@@ -97,11 +97,11 @@
             <h5 class="center">Databases</h5>
 
             <ul class="light">
-              <li><strong>MySql</li>
-              <li>PostgresSQL</li>
-              <li>MongoDB</li>
-              <li>Redis</li>
-              <li>Solr</li>
+              <li><strong>◦ MySql</li>
+              <li>◦ PostgresSQL</li>
+              <li>◦ MongoDB</li>
+              <li>◦ Redis</li>
+              <li>◦ Solr</li>
             </ul>
           </div>
         </div>
@@ -150,9 +150,10 @@
 
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send black-text"></i></h3>
-          <h4>Contact</h4>
-          <p color = "black">Please feel free to use any of the methods at the top of the page. </p>
+          <h3><i class="mdi-action-description black-text"></i></h3>
+            <a class="btn tooltipped" data-position="right" data-delay="50" data-tooltip="Download" href="resume.pdf">Resume</a>
+
+          <p color = "black"> Press here to view my Resume in a beautiful PDF format. </p>
         </div>
       </div>
 
