--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -5,10 +5,10 @@
       <div class="collapsible-body">
 
       	<p alight-text="left">
-		Hey There! My name is Rick and I currently a Free Agent in the software development field. 
+		<center>Hey There! My name is Rick and I currently a Free Agent in the software development field. </center>
         </p>
         <p>
-      	I decided to use some free time to build out the website you are looking at now.  It's using the <b>Materialize</b> front-end framework with <b>Ruby on Rails</b> for the back-end. I wanted something cool and different for my website so I went with something pretty design heavy. Anyway, I included a link at the bottom to download my Resume in a profession PDF format. Don't forget to reach out to me I'm lonely!
+      	I decided to use some free time to build out the website you are looking at now.  It's using the <b>Materialize</b> front-end framework with <b>Ruby on Rails</b> on the back-end. I wanted something cool and different for my website so I went with something pretty design heavy. It includes all important information about me while showing off my skills in coding.  Anyway, I included a link at the bottom to download my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
 
 
