--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ a:hover {
 
 p {
   line-height: 2rem;
-  
+
 }
 
 .button-collapse {
@@ -70,7 +70,7 @@ footer.page-footer {
 
 .profile-photo {
   display: block;
-  max-width: 200px;
+  max-width: 150px;
   margin: 0 auto 0px;
   margin-bottom: 20px;
   border-radius: 100%;
@@ -80,6 +80,13 @@ footer.page-footer {
 .lightspeed-logo {
  margin-top: 30px;
   max-width: 70px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
+
+}
+
+.xerox-logo {
+ margin-top: 30px;
+  max-width: 160px;
+  margin-bottom: 0px;
 
 }
