update bullet points

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,10 +68,10 @@
             <h5 class="center">Languages</h5>
 
             <ul class="light" style="list-style-type:square">
-            	<li><strong>◦ Ruby</li>
-            	<li>◦ Javascipt</li>
-            	<li>◦ HTML5</li>
-            	<li>◦ CSS</li>
+            	<li><strong>Ruby</li>
+            	<li>Javascipt</li>
+            	<li>HTML5</li>
+            	<li>CSS</li>
             </ul>
             
           </div>
@@ -83,10 +83,10 @@
             <h5 class="center">Frameworks</h5>
 
             <ul class="light">
-              <li><strong>◦ Ruby on Rails</lu>
-              <li>◦ Sinatra</li>
-              <li>◦ Bootstrap</li>
-              <li>◦ Materialize</li>
+              <li><strong>Ruby on Rails</lu>
+              <li>Sinatra</li>
+              <li>Bootstrap</li>
+              <li>Materialize</li>
             </ul>
           </div>
         </div>
@@ -97,11 +97,11 @@
             <h5 class="center">Databases</h5>
 
             <ul class="light">
-              <li><strong>◦ MySql</li>
-              <li>◦ PostgresSQL</li>
-              <li>◦ MongoDB</li>
-              <li>◦ Redis</li>
-              <li>◦ Solr</li>
+              <li><strong>MySql</li>
+              <li>PostgresSQL</li>
+              <li>MongoDB</li>
+              <li>Redis</li>
+              <li>Solr</li>
             </ul>
           </div>
         </div>
