changed header to exp partial

--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,3 +1,5 @@
+<h5 class="header center white-text text-lighten-2">Experience</h5>
+
 <img src="lightspeed.png" alt="lightspeed" class="lightspeed-logo">
 
 
