Add logos for projects, tweak a few more things

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -4,12 +4,12 @@
 </p>
 
 
+
 <p align="left">
-  <strong>Self Study</strong> <br> Ruby, Ruby on Rails, HTML, CSS, Javascript
+Self Study
+  <br> Ruby, Ruby on Rails, HTML, CSS, Javascript
 </p>
 
 <p align="left">
   <strong>Regional Occupational Center</strong> <br> A+ Certification
 </p>
-
-
