--- a/public/style.css
+++ b/public/style.css
@@ -90,3 +90,18 @@ footer.page-footer {
   margin-bottom: 0px;
 
 }
+
+.mybigcampus-logo {
+max-width: 80px;
+
+}
+
+.mdm-logo{
+  max-width: 80px;
+
+}
+
+.rocket-logo{
+  max-width: 80px;
+
+}
