--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,67 +56,19 @@
 
   <div class="container">
     
-    <div class="section">
-              <%=render "shared/aboutme"%>
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-image-flash-on"></i></h2>
-            <h5 class="center">Languages</h5>
-
-            <ul class="light" style="list-style-type:square">
-            	<li><strong>Ruby</li>
-            	<li>Javascipt</li>
-            	<li>HTML5</li>
-            	<li>CSS</li>
-            </ul>
-            
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-content-link"></i></h2>
-            <h5 class="center">Frameworks</h5>
-
-            <ul class="light">
-              <li><strong>Ruby on Rails</lu>
-              <li>Sinatra</li>
-              <li>Bootstrap</li>
-              <li>Materialize</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-action-settings"></i></h2>
-            <h5 class="center">Databases</h5>
-
-            <ul class="light">
-              <li><strong>MySql</li>
-              <li>PostgresSQL</li>
-              <li>MongoDB</li>
-              <li>Redis</li>
-              <li>Solr</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-    </div>
+    
+   <%=render "shared/aboutme"%>
+   <%=render "shared/skills"%>
   </div>
 
 
   <div class="parallax-container valign-wrapper">
+
+
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          
-          <%= render 'shared/experience' %>
-
-            <h5 class="header col s12 light"></h5>
+         <%= render 'shared/experience' %>
         </div>
       </div>
     </div>
@@ -124,8 +76,15 @@
   </div>
 
   <div class="container">
+            <div class="row center">
+          
+
+
+            <h5 class="header col s12 light"></h5>
+        </div>
     <!-- Projects Section -->
     <%= render 'shared/projects' %>
+
   </div>
 
 
