--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -4,10 +4,10 @@
       <div class="collapsible-header"><i class="mdi-image-filter-dram"></i><center>About Me</center></div>
       <div class="collapsible-body">
 
-      	<p alight-text="left">
-		<center>Hey There! My name is Rick and I currently a Free Agent in the software development field. </center>
+      	<p align-text="left">
+      	Hey There! My name is Rick and I currently a Free Agent in the software development field.
         </p>
-        <p>
+        <p align-text="justify">
       	I decided to use some free time to build out the website you are looking at now.  It's using the <b>Materialize</b> front-end framework with <b>Ruby on Rails</b> on the back-end. I wanted something cool and different for my website so I went with something pretty design heavy. It includes all important information about me while showing off my skills in coding.  Anyway, I included a link at the bottom to download my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
 
