--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -1,8 +1,10 @@
+<h5 class="center black-text">Projects I've worked on</h2>
+
  <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-action-description"></i></h2>
-            <h5 class="center">Project 1</h5>
+            <h2 class="center black-text"><img src="mdm-logo.png" class="mdm-logo"></h2>
+            <h5 class="center">Mobile Device Manager</h5>
 
             
           </div>
@@ -10,8 +12,9 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-action-group-work"></i></h2>
-            <h5 class="center">Project 2</h5>
+            <h2 class="center black-text"><img src="mybigcampus.png" class="mybigcampus-logo"></h2>
+            <h5 class="center">My Big Campus</h5>
+
 
 
           </div>
@@ -19,8 +22,8 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="mdi-action-track-changes"></i></h2>
-            <h5 class="center">Project 3</h5>
+            <h2 class="center black-text"><img src="rocket-logo.png" class="rocket-logo"></h2>
+            <h5 class="center">Rocket Webfilter</h5>
 
             <ul class="light">
 
