--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,11 +36,9 @@
         <div class="row center">
            <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
            <p>
-              <a href="tel:6613167626">Call</a> |
-              <a href="mailto:fernandezr16@gmail.com">Mail</a> |
-              <a href="http://twitter.com/intent/tweet?screen_name=rickthemovie">Tweet!</a><br>
 
-
+              <i class="mdi-communication-phone prefix"> 661 - 316 - 7626    </i>
+              <i class="mdi-content-mail"> Fernandezr16@gmail.com</i>
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
 
@@ -92,7 +90,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-           <h5 class="header col s12 light">Education</h5>
+           
            <%=render "shared/education"%>
         </div>
       </div>
