--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -1,7 +1,7 @@
 
   <ul class="collapsible popout" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header"><i class="mdi-image-filter-dram"></i><center>About Me</center></div>
+      <div class="collapsible-header active"><i class="mdi-image-filter-dram"></i><center>About Me</center></div>
       <div class="collapsible-body">
 
       	<p align-text="left">
