--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -1,15 +1,22 @@
+<h5 class="header col s12 light">Education</h5>
 
+<p><br> &nbsp;</p>
+  <br><b>Devry University of Bakersfield</b>
 <p align="left">
-  <strong>Devry University of Bakersfield</strong> <br> B.S. Networking and Communication
+ <br> B.S. Networking and Communication
 </p>
 
 
-
+<b>Self Study</b>
 <p align="left">
-Self Study
+
   <br> Ruby, Ruby on Rails, HTML, CSS, Javascript
+  <br> TeamTreeHouse
+  <br> CodeSchool
+  <br> Michael Hartl's Rails Tutorial
 </p>
 
+  <b>Regional Occupational Center</b>
 <p align="left">
-  <strong>Regional Occupational Center</strong> <br> A+ Certification
+ <br> A+ Certification
 </p>
