trying to add highlight to dates

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -1,4 +1,4 @@
-<h5 class="header col s12 light">Education</h5>
+<h5 class="header col s12 light" id ="education">Education</h5>
 
 <p><br> &nbsp;</p>
   <br><b>Devry University of Bakersfield</b>
