--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -1,4 +1,4 @@
-<h5 class="center black-text">Projects I've worked on</h2>
+<h5 class="center black-text" id = "projects">Projects I've worked on</h2>
 
  <div class="row">
         <div class="col s12 m4">
