--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,36 +1,39 @@
-   <h5 class="header col s12 light">Experience</h5>
+   <h5 class="header col s12 light" id="experience">Experience</h5>
 
 <img src="lightspeed.png" alt="lightspeed" class="lightspeed-logo">
 
 
 <p align = "center">
-    <strong>Lightspeed Systems Inc</strong> <br> Feb 2014 – Mar 2015
+    <strong>Lightspeed Systems Inc</strong> <br> 
 </p>
+
+
+<article><span style="float:left"> <strong>SaaS QA Engineer</strong> </span> <span style="float:right"> Feb 2014 – Mar 2015 </span>  <br> </article>
+
 <p align="left">
-    <strong>SaaS QA Engineer</strong> <br>
+
     As a senior member of the SaaS QA department, 
 </p>
 
 
 
-<p> <strong>June 2013 - Feb 2014</strong></p>
 <p align="left">
-    <strong>Webfilter QA Engineer </strong> <br>
+    <strong>Webfilter QA Engineer </strong><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br>
     During my accelatered workload on the Webfilter team, I dove head first into
 </p>
 
-<p> <strong>Sept 2011 - June 2013</strong></p>
+
 <p align="left">
-    <strong>Support Engineer </strong> <br>
+    <strong>Support Engineer </strong> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br>
     Working directly in Customer Service was something I enjoyed. 
 </p>
 
 <img src="xerox.png" alt="lightspeed" class="xerox-logo">
 
 <p align = "center">
-    <strong>Affiliated Computer Services </strong> <br> Feb 2011 – Sept 2011
+    <strong>Affiliated Computer Services </strong> <br> 
 </p>
 <p align="left">
-    <strong>Wireless Customer Care Assistant </strong> <br>
+    <strong>Wireless Customer Care Assistant </strong> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br>
     My Day to Day at ACS was troubleshooting over the phone thorughout the day. Although it wasn't as technical as I got into later in my career is did teach me valuable lessons in Customer Serivce. At Xerox, you are taking back-to-back phone calls everyday all day. You get a huge spectrum of happy and unhappy customer. I can honestly say that the experiences while on the phones in a call center are invaluable. 
 </p>
