--- a/app/views/shared/_skills.html.erb
+++ b/app/views/shared/_skills.html.erb
@@ -1,9 +1,9 @@
       <!--   Skills Section   -->
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
+        <div class="col s12 m4" >
+          <div class="icon-block" id = "skills">
             <h2 class="center black-text"><i class="mdi-image-flash-on"></i></h2>
-            <h5 class="center">Languages</h5>
+            <h5 class="center" >Languages</h5>
 
             <ul class="center light" style="list-style-type:square">
             	<li><strong>Ruby</li>
