highlight dates add padding

--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -7,8 +7,9 @@
     <strong>Lightspeed Systems Inc</strong> <br> 
 </p>
 
-
-<article><span style="float:left"> <strong>SaaS QA Engineer</strong> </span> <span style="float:right"> Feb 2014 – Mar 2015 </span>  <br> </article>
+<p class="title-date">
+<span style="float:left"> <strong>SaaS QA Engineer</strong> </span> <span style="float:right"> Feb 2014 – Mar 2015 </span>  <br> 
+</p>
 
 <p align="left">
 
@@ -16,15 +17,15 @@
 </p>
 
 
+<p class="title-date"> <span style="float:left"> <strong>Webfilter QA Engineer </strong></span><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br></p>
 
 <p align="left">
-    <strong>Webfilter QA Engineer </strong><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br>
     During my accelatered workload on the Webfilter team, I dove head first into
 </p>
 
+<p class="title-date"><span style="float:left"> <strong>Support Engineer </strong> </span> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br> <p>
 
 <p align="left">
-    <strong>Support Engineer </strong> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br>
     Working directly in Customer Service was something I enjoyed. 
 </p>
 
@@ -33,7 +34,12 @@
 <p align = "center">
     <strong>Affiliated Computer Services </strong> <br> 
 </p>
+
+
+
+<p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care Assistant </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
+
 <p align="left">
-    <strong>Wireless Customer Care Assistant </strong> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br>
+
     My Day to Day at ACS was troubleshooting over the phone thorughout the day. Although it wasn't as technical as I got into later in my career is did teach me valuable lessons in Customer Serivce. At Xerox, you are taking back-to-back phone calls everyday all day. You get a huge spectrum of happy and unhappy customer. I can honestly say that the experiences while on the phones in a call center are invaluable. 
 </p>
