--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@ a:hover {
 
 
 p {
+  padding-left: 10px; 
   line-height: 2rem;
 
 }
@@ -111,7 +112,7 @@ max-width: 80px;
 }
 
 .title-date{  
-
-    background-color: black!important;
+  padding: 0px 10px 0px 10px;
+  background-color: rgba(0, 0, 0, 0.3);
 
 }
