Add background highlight to education

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -1,22 +1,41 @@
 <h5 class="header col s12 light" id ="education">Education</h5>
 
 <p><br> &nbsp;</p>
-  <br><b>Devry University of Bakersfield</b>
-<p align="left">
- <br> B.S. Networking and Communication
+ 
+<p class="title-date">
+<span style="float:left"> <strong>Self Study</strong> </span> <span style="float:right"> Present </span>  <br> 
 </p>
 
 
-<b>Self Study</b>
+
 <p align="left">
 
-  <br> Ruby, Ruby on Rails, HTML, CSS, Javascript
+  Ruby, Ruby on Rails, HTML, CSS, Javascript
   <br> TeamTreeHouse
   <br> CodeSchool
   <br> Michael Hartl's Rails Tutorial
+  <br> Personal Projects
 </p>
 
-  <b>Regional Occupational Center</b>
-<p align="left">
- <br> A+ Certification
+
+<p class="title-date">
+<span style="float:left"> <strong>Devry Univerisity of Bakersfield</strong> </span> <span style="float:right"> January 2014 </span>  <br> 
 </p>
+
+
+
+
+<p align="left">
+B.S. Networking and Communication
+</p>
+
+
+
+<p class="title-date">
+<span style="float:left"> <strong>Regional Occupational Center</strong> </span> <span style="float:right"> 2008 - 2010 </span>  <br> 
+</p>
+
+<p align="left">
+A+ Certification
+</p>
+
