--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -3,15 +3,14 @@
 <p><br> &nbsp;</p>
  
 <p class="title-date">
-<span style="float:left"> <strong>Self Study</strong> </span> <span style="float:right"> Present </span>  <br> 
+<span style="float:left"> <strong>Self Study | Ruby, Ruby on Rails, HTML, CSS, Javascript</strong> </span> <span style="float:right"> Present </span>  <br> 
 </p>
 
 
 
 <p align="left">
 
-  Ruby, Ruby on Rails, HTML, CSS, Javascript
-  <br> TeamTreeHouse
+   TeamTreeHouse
   <br> CodeSchool
   <br> Michael Hartl's Rails Tutorial
   <br> Personal Projects
