--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -40,6 +40,5 @@
 <p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care Assistant </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
 
 <p align="left">
-
-    My Day to Day at ACS was troubleshooting over the phone thorughout the day. Although it wasn't as technical as I got into later in my career is did teach me valuable lessons in Customer Serivce. At Xerox, you are taking back-to-back phone calls everyday all day. You get a huge spectrum of happy and unhappy customer. I can honestly say that the experiences while on the phones in a call center are invaluable. 
+I can honestly say that the experiences while on the phones in a call center were invaluable. 
 </p>
