--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ a {
     color: white;
 }
 a:hover {
-    color: teal;
+    color: white;
 }
 
 
@@ -35,7 +35,7 @@ p {
 }
 
 .parallax-container {
-  min-height: 300px;
+  min-height: 200px;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
