--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  
+
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">&#9813;</a>
@@ -36,11 +36,12 @@
         <br><br>
         <h1 class="header center white-text text-lighten-2">Ricardo Fernandez</h1>
         <div class="row center">
-           <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
+                   <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
+
            <p>
 
-              <i class="mdi-communication-phone prefix"> 661 - 316 - 7626    </i>
-              <i class="mdi-content-mail"> Fernandezr16@gmail.com</i>
+              <i class="mdi-communication-phone prefix"> <a href="tel:6613167626">661 - 316 - 7626 </a>   </i>
+              <i class="mdi-content-mail"> <a href="mailto:Fernandezr16"> Fernandezr16@gmail.com</a></i>
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
 
