--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -18,7 +18,7 @@
 
 
 <p class="title-date">
-<span style="float:left"> <strong>Devry Univerisity of Bakersfield</strong> </span> <span style="float:right"> January 2014 </span>  <br> 
+<span style="float:left"> <strong>Devry Univerisity of Bakersfield</strong> </span> <span style="float:right"> 2010 - 2014 </span>  <br> 
 </p>
 
 
@@ -38,3 +38,10 @@ B.S. Networking and Communication
 A+ Certification
 </p>
 
+<p class="title-date">
+<span style="float:left"> <strong>Golden Valley High School</strong> </span> <span style="float:right"> 2006 - 2010 </span>  <br> 
+</p>
+
+<p align="left">
+4.0 GPA
+</p>
