--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -40,5 +40,5 @@
 <p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care Assistant </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
 
 <p align="left">
-I can honestly say that the experiences while on the phones in a call center were invaluable. 
+I can honestly say  the experiences while on the phones in a call center were invaluable. 
 </p>
