--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,7 +41,7 @@
            <p>
 
               <i class="mdi-communication-phone prefix"> <a href="tel:6613167626">661 - 316 - 7626 </a>   </i>
-              <i class="mdi-content-mail"> <a href="mailto:Fernandezr16"> Fernandezr16@gmail.com</a></i>
+              <i class="mdi-content-mail "> <a href="mailto:Fernandezr16@gmail.com"> Contact@rickthedeveloper.com</a></i>
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
 
