--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -3,14 +3,19 @@
     <li>
       <div class="collapsible-header"><i class="mdi-image-filter-dram"></i><center>Press Here To Read About Me</center></div>
       <div class="collapsible-body">
+<!-- 
+    I FEEL BLESSED -->
+
+        <p><center>Now Playing:</center><center><iframe width="560" height="315" src="https://www.youtube.com/embed/M6t47RI4bns?&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=171&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
+
+
 
       	<p align-text="left">
-      	Hey There! My name is Rick and I currently a Free Agent in the software development field.
+      	Hey There! My name is Rick and I am currently a Free Agent in the software development field.
         <br>
         <br>
-      	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted something sleek and simple for my website so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link at the bottom to  my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
+      	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that is sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
-
 
       </div>
     </li>
