--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -1,4 +1,4 @@
-<h5 class="center black-text" id = "projects">Projects I've worked on</h2>
+<h5 class="center black-text" id = "projects">Professional Projects I've Worked On</h2>
 
  <div class="row">
         <div class="col s12 m4">
@@ -36,3 +36,19 @@
 
     </div>
   </div>
+<!-- 
+  15secondtrailers
+
+          <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center black-text"><img src="15logo.png" class="fif-logo"></h2>
+            <h5 class="center">Rocket Webfilter</h5>
+
+            <ul class="light">
+
+          </div>
+
+
+
+        </div>
+      </div> -->
