add buttons to projects

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,10 +38,11 @@
         <div class="row center">
                    <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
 
-           <p>
+           <p class="title-date">
 
               <i class="mdi-communication-phone prefix"> <a href="tel:6613167626">661 - 316 - 7626 </a>   </i>
               <i class="mdi-content-mail "> <a href="mailto:Fernandezr16@gmail.com"> Contact@rickthedeveloper.com</a></i>
+            </p>
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
 
@@ -128,4 +129,5 @@
   <script src="js/init.js"></script>
 
   </body>
+          
 </html>
