--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -4,19 +4,23 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center black-text"><img src="mdm-logo.png" class="mdm-logo"></h2>
-            <h5 class="center">Mobile Device Manager</h5>
+            <h5 class="center">Mobile Manager</h5> 
+        
+        <!-- Modal Trigger -->
+          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal1">Learn More</a></center>
 
-            
+        <!-- Modal Structure -->
+        <div id="modal1" class="modal">
+          <div class="modal-content">
+            <h4></h4>
+            <p>
+            <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/TlBB3RM9O3A?&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <a href="http://www.lightspeedsystems.com/products/mobile-manager/" class=" modal-action modal-close waves-effect waves-green btn">Website</a>
           </div>
         </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center black-text"><img src="mybigcampus.png" class="mybigcampus-logo"></h2>
-            <h5 class="center">My Big Campus</h5>
-
-
-
           </div>
         </div>
 
@@ -25,10 +29,49 @@
             <h2 class="center black-text"><img src="rocket-logo.png" class="rocket-logo"></h2>
             <h5 class="center">Rocket Webfilter</h5>
 
-            <ul class="light">
+        <!-- Modal Trigger -->
+          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal3">Learn More</a></center>
 
+        <!-- Modal Structure -->
+        <div id="modal3" class="modal">
+          <div class="modal-content">
+            <h4></h4>
+            <p>
+            <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/tp9vlsP4J2U?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <a href="http://www.lightspeedsystems.com/products/web-filter/" class=" modal-action modal-close waves-effect waves-green btn">Website</a>
+          </div>
+        </div>
+          </div>
           </div>
 
+
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center black-text"><img src="mybigcampus.png" class="mybigcampus-logo"></h2>
+            <h5 class="center">My Big Campus</h5>
+
+        <!-- Modal Trigger -->
+          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal2">Learn More</a></center>
+
+        <!-- Modal Structure -->
+        <div id="modal2" class="modal">
+          <div class="modal-content">
+            <h4></h4>
+            <p>
+            <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/0_2zgrATWAM?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <a href="http://www.mybigcampus.com/" class=" modal-action modal-close waves-effect waves-green btn">Website</a>
+          </div>
+        </div>
+
+          </div>
+        </div>
 
 
         </div>
@@ -36,6 +79,9 @@
 
     </div>
   </div>
+
+
+
 <!-- 
   15secondtrailers
 
