--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -25,7 +25,9 @@
 
 
 <p align="left">
-B.S. Networking and Communication
+B.S. Networking Science and Communication<br>
+Management Courses <br>
+4.0 GPA
 </p>
 
 
@@ -35,7 +37,8 @@ B.S. Networking and Communication
 </p>
 
 <p align="left">
-A+ Certification
+A+ Certification <br>
+Internships at Geeksquad, Skyworld Inc, and more.
 </p>
 
 <p class="title-date">
