--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -13,7 +13,7 @@
       	Hey There! My name is Rick and I am currently a Free Agent in the software development field.
         <br>
         <br>
-      	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> for the front-end, <b>Ruby on Rails</b> for the back-end, and <b>Heroku</b> for hosting. I wanted a website that is sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
+      	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that is sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
 
       </div>
