Add experience paragraphs

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -1,7 +1,7 @@
 <h5 class="header col s12 light" id ="education">Education</h5>
 
 <p><br> &nbsp;</p>
- 
+ <!-- SELF STUDY -->
 <p class="title-date">
 <span style="float:left"> <strong>Self Study | Ruby, Ruby on Rails, HTML, CSS, Javascript</strong> </span> <span style="float:right"> Present </span>  <br> 
 </p>
@@ -17,6 +17,21 @@
 </p>
 
 
+<!-- Conferences -->
+<p class="title-date">
+<span style="float:left"> <strong>Conferences</strong> </span> <span style="float:right"> 2014 - Present </span>  <br> 
+</p>
+
+
+
+
+<p align="left">
+RailsConf - San Diego<br>
+Lightspeed Connect - Austin
+</p>
+
+<!-- Devry -->
+
 <p class="title-date">
 <span style="float:left"> <strong>Devry Univerisity of Bakersfield</strong> </span> <span style="float:right"> 2010 - 2014 </span>  <br> 
 </p>
@@ -30,17 +45,17 @@ Management Courses <br>
 4.0 GPA
 </p>
 
-
-
+<!-- ROC -->
 <p class="title-date">
 <span style="float:left"> <strong>Regional Occupational Center</strong> </span> <span style="float:right"> 2008 - 2010 </span>  <br> 
 </p>
 
 <p align="left">
 A+ Certification <br>
-Internships at Geeksquad, Skyworld Inc, and more.
+Internships
 </p>
 
+<!-- Highschool -->
 <p class="title-date">
 <span style="float:left"> <strong>Golden Valley High School</strong> </span> <span style="float:right"> 2006 - 2010 </span>  <br> 
 </p>
