--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -12,21 +12,25 @@
 </p>
 
 <p align="left">
+As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to a staging environment and using a proprietary deploy tool to release to production post-regression. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. <br>
 
-    As a senior member of the SaaS QA department, 
+It was also in this position where my experience was used to mentor junior members of the SaaS Department.
+
 </p>
 
 
 <p class="title-date"> <span style="float:left"> <strong>Webfilter QA Engineer </strong></span><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br></p>
 
 <p align="left">
-    During my accelatered workload on the Webfilter team, I dove head first into
+During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities were acting as Tier III to find solutions to issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
+
 </p>
 
 <p class="title-date"><span style="float:left"> <strong>Support Engineer </strong> </span> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br> <p>
 
 <p align="left">
-    Working directly in Customer Service was something I enjoyed. 
+Working in Support consisted of monitoring a real-time queue of tickets and responding via outbound calls to customers. After an issue was solved, a ticket was taken and closed in your name. During my time in Support, I repeatedly obtained the highest number of taken and closed with a total of 2,500+ per year. Scope included advanced network troubleshooting, client based troubleshooting, and hardware configuration. 
+
 </p>
 
 <img src="xerox.png" alt="lightspeed" class="xerox-logo">
@@ -38,7 +42,7 @@
 
 
 <p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care Assistant </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
-
-<p align="left">
-I can honestly say  the experiences while on the phones in a call center were invaluable. 
-</p>
+    <!-- ACS Experience -->
+<!-- <p align="left">
+I can honestly say  the experiences while on the phones in a call center were invaluable. Whilst taking back-to-back inbound calls all day, you speak to a large spectrum of personalities. In doing so, you obtain experience to speak confidently and properly handle situations that may go awry. 
+</p> -->
