--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -1,4 +1,5 @@
-   <h5 class="header col s12 light" id="experience">Experience</h5>
+<article>
+<h5 class="header col s12 light" id="experience">Experience</h5>
 
 <img src="lightspeed.png" alt="lightspeed" class="lightspeed-logo">
 
@@ -46,3 +47,5 @@ Working in Support consisted of monitoring a real-time queue of tickets and resp
 <!-- <p align="left">
 I can honestly say  the experiences while on the phones in a call center were invaluable. Whilst taking back-to-back inbound calls all day, you speak to a large spectrum of personalities. In doing so, you obtain experience to speak confidently and properly handle situations that may go awry. 
 </p> -->
+
+</article>
