--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,6 @@ max-width: 70px;
 
 .title-date{  
   padding: 0px 10px 0px 10px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, .4);
 
 }
