--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -13,9 +13,7 @@
 </p>
 
 <p align="left">
-As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to a staging environment and using a proprietary deploy tool to release to production post-regression. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. <br>
-
-It was also in this position where my experience was used to mentor junior members of the SaaS Department.
+As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to a staging environment and using a proprietary deploy tool to release to production post-regression. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. It was also in this position where my experience was used to mentor junior members.
 
 </p>
 
@@ -23,7 +21,7 @@ It was also in this position where my experience was used to mentor junior membe
 <p class="title-date"> <span style="float:left"> <strong>Webfilter QA Engineer </strong></span><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br></p>
 
 <p align="left">
-During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities were acting as Tier III to find solutions to issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
+During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities were acting as Tier III to find and resolve issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
 
 </p>
 
