finish buttons add highlight to expeirence para

--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -12,7 +12,7 @@
 <span style="float:left"> <strong>SaaS QA Engineer</strong> </span> <span style="float:right"> Feb 2014 – Mar 2015 </span>  <br> 
 </p>
 
-<p align="left">
+<p id ="high" align="left">
 As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to a staging environment and using a proprietary deploy tool to release to production post-regression. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. It was also in this position where my experience was used to mentor junior members.
 
 </p>
@@ -20,14 +20,14 @@ As a Senior member of the SaaS QA department, my primary responsibilities were h
 
 <p class="title-date"> <span style="float:left"> <strong>Webfilter QA Engineer </strong></span><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br></p>
 
-<p align="left">
+<p id ="high" align="left">
 During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities were acting as Tier III to find and resolve issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
 
 </p>
 
 <p class="title-date"><span style="float:left"> <strong>Support Engineer </strong> </span> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br> <p>
 
-<p align="left">
+<p id ="high" align="left">
 Working in Support consisted of monitoring a real-time queue of tickets and responding via outbound calls to customers. After an issue was solved, a ticket was taken and closed in your name. During my time in Support, I repeatedly obtained the highest number of taken and closed with a total of 2,500+ per year. Scope included advanced network troubleshooting, client based troubleshooting, and hardware configuration. 
 
 </p>
